@@ -250,25 +250,25 @@ void Hero::SpinAttackState::notify_attacked_enemy(
     bool /* killed */) {
 
   Hero& hero = get_entity();
-  if (result.type != EnemyReaction::ReactionType::IGNORED && attack == EnemyAttack::SWORD) {
+  if (attack == EnemyAttack::SWORD &&
+      victim.get_push_hero_on_sword() &&
+      result.type != EnemyReaction::ReactionType::IGNORED &&
+      result.type != EnemyReaction::ReactionType::LUA_CALLBACK) {
 
-    if (victim.get_push_hero_on_sword()) {
-
-      if (hero.get_movement() != nullptr) {
-        // interrupting a super spin attack: finish with a normal one
-        hero.clear_movement();
-        get_sprites().set_animation_spin_attack();
-      }
-
-      being_pushed = true;
-      double angle = victim.get_angle(hero, victim_sprite, nullptr);
-      std::shared_ptr<StraightMovement> movement =
-          std::make_shared<StraightMovement>(false, true);
-      movement->set_max_distance(24);
-      movement->set_speed(120);
-      movement->set_angle(angle);
-      hero.set_movement(movement);
+    if (hero.get_movement() != nullptr) {
+      // interrupting a super spin attack: finish with a normal one
+      hero.clear_movement();
+      get_sprites().set_animation_spin_attack();
     }
+
+    being_pushed = true;
+    double angle = victim.get_angle(hero, victim_sprite, nullptr);
+    std::shared_ptr<StraightMovement> movement =
+        std::make_shared<StraightMovement>(false, true);
+    movement->set_max_distance(24);
+    movement->set_speed(120);
+    movement->set_angle(angle);
+    hero.set_movement(movement);
   }
 }
 
