@@ -132,7 +132,9 @@ void Hero::SwordLoadingState::notify_attacked_enemy(
     EnemyReaction::Reaction& result,
     bool killed) {
 
-  if (result.type != EnemyReaction::ReactionType::IGNORED && attack == EnemyAttack::SWORD) {
+  if (attack == EnemyAttack::SWORD &&
+      result.type != EnemyReaction::ReactionType::IGNORED &&
+      result.type != EnemyReaction::ReactionType::LUA_CALLBACK) {
 
     Hero& hero = get_entity();
     if (victim.get_push_hero_on_sword()) {
