@@ -45,6 +45,7 @@ Changes that do not introduce incompatibilities:
 * Add methods entity:get_property() and entity:set_property() (#1094).
 * Add methods entity:get_properties() and entity:set_properties() (#1144).
 * Add methods entity:get_layer() and entity:set_layer().
+* Add optional callback parameter to enemy:set_attack_consequence() (#1062).
 * Add methods enemy:get/set_attacking_collision_mode() (#1066).
 * Add a method sprite:get_frame_src_xy() (#1093).
 * sprite:get_num_frames() can now optionally take an animation and direction.
